# dataton-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
archivos-desafio/: NOMBRE EQUIPO_output_p3.csv
taller-ml/: environment.yml  oficial.ipynb
taller-ml/Data/02_workshop-data/: cerezas_consolidadas.csv
taller-ml/Debug/: 1_df_drop.csv  2_df_group.csv  3_df_time.csv  4_df_train.csv  5_df_valid.csv  6_df_valid_prepared.csv  7_df_valid_shifted.csv  NOMBRE_CORRESPONDIENTE.csv
